--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@shopify/flash-list": "^1.6.1",
@@ -22,9 +23,11 @@
     "react-native": "0.72.6",
     "react-native-config": "^1.5.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.26.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^13.14.0",
     "styled-components": "^6.1.0"
   },
